# WebRTC-Robot-Controller

./: README.md  browser_server.js  package-lock.json  server.js  signaling_server.js  signaling_server.py  test.go
pc_server/: package-lock.json  server.js
pc_server/public/: index.html  main.js
pi_peer/: go.mod  go.sum  main.go
pi_server/: main.py
public/: browser_peer.js  index.html  webrtc.js
raspberrypi_server/: main.js  package.json
robot_server/: app.py
ros2/: CMakeLists.txt
ros2_x/: CMakeLists.txt  package.xml
ros2_x/src/: manipulator_node.cpp
scripts/: roscore.sh  webrtc.sh
scripts_x/: webcam.sh
signaling_server/: app.js  package-lock.json  package.json
